# FfmpegIntegration

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/me/sonaive/ffmpegintegration/: App.kt
app/src/main/java/me/sonaive/ffmpegintegration/module/: MainActivity.kt
app/src/main/java/me/sonaive/ffmpegintegration/utils/: ToastUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ffmpeg_video_encode_decode/: build.gradle
ffmpeg_video_encode_decode/src/main/: AndroidManifest.xml
ffmpeg_video_encode_decode/src/main/cpp/: CMakeLists.txt
ffmpeg_video_encode_decode/src/main/cpp/jni/: video_encode_decode.cpp
ffmpeg_video_encode_decode/src/main/java/me/sonaive/videoencodedecode/: FfmpegUtil.kt
